# PyFDFD

./: .gitignore  LICENSE  LS_computation.py  PyFDFD.py  README.md  draft_exp1.ipynb  ex1_cylindrical_object.ipynb  matrix.py  pyfdfd.py  pyfdfd_.py  pyproject.toml  setup.py  stencils.py
.ipynb_checkpoints/: PyFDFD-checkpoint.py  ex1_cylindrical_object-checkpoint.ipynb  matrix-checkpoint.py
examples/: draft_exp1.ipynb  draft_exp2.ipynb  ex1_cylindrical_object.ipynb  ex2_arbitrary_object.ipynb
pyfdfd/: __init__.py  stencils.py
pyhelmholtzfd/: __init__.py  matrix.py  mie2D.py  pyfdfd.py  pyhelmholtzfd.py
