[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhelmholtzfd"
version = "1.0.0" 
description = ""
authors = [
    { name = "Sirawit Inpuak", email = "sirawit.inp@hotmail.com" }
]
dependencies = [
    "scipy>=1.14.1",
    "numpy>=2.1.1"
]
