[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhelmholtzfd"
version = "1.0.0" 
description = ""
authors = [
    { name = "Sirawit Inpuak", email = "sirawit.inp@hotmail.com" }
]

dependencies = [
    "numpy>=1.15.1",
    "scipy>=1.1.0",
    "matplotlib>=2.2.3"    
]